--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,7 @@
 		<replace file="frontends/php/conf/zabbix.conf.php" token="{DBUSER}" value="${dbuser}"/>
 		<replace file="frontends/php/conf/zabbix.conf.php" token="{DBPASSWORD}" value="${dbpassword}"/>
 		<replace file="frontends/php/conf/zabbix.conf.php" token="{PHPUNIT_ERROR_LOG}" value="${phpunit_error_log}"/>
+		<replace file="frontends/php/conf/zabbix.conf.php" token="{SERVER_PORT}" value="${phpunit_port_prefix}51"/>	<!-- 51 - CIntegrationTest::SERVER_PORT_SUFFIX -->
 		<chmod file="frontends/php/conf/zabbix.conf.php" perm="go+rw"/>
 	</target>
 
