--- a/build.xml
+++ b/build.xml
@@ -342,6 +342,7 @@
 		<exec executable="phpunit" dir="frontends/php/tests" failonerror="off">
 			<arg line="--log-junit=${basedir}/build/logs/phpunit.xml"/>
 			<arg line="--bootstrap=bootstrap.php"/>
+			<arg line="--dont-report-useless-tests"/>
 			<arg line="${phpunit_filter}"/>
 			<arg line="frontend.php"/>
 		</exec>
