--- a/build.xml
+++ b/build.xml
@@ -333,6 +333,7 @@
 	<target name="test-phpunit" depends="init-common">
 		<exec executable="phpunit" dir="frontends/php/tests/unit" failonerror="off">
 			<arg line="--log-junit=${basedir}/build/logs/phpunit.xml"/>
+			<arg line="--do-not-cache-result"/>
 			<arg line="${phpunit_filter}"/>
 			<arg line="include/"/>
 		</exec>
@@ -342,6 +343,7 @@
 		<exec executable="phpunit" dir="frontends/php/tests" failonerror="off">
 			<arg line="--log-junit=${basedir}/build/logs/phpunit.xml"/>
 			<arg line="--bootstrap=bootstrap.php"/>
+			<arg line="--do-not-cache-result"/>
 			<arg line="--dont-report-useless-tests"/>
 			<arg line="${phpunit_filter}"/>
 			<arg line="frontend.php"/>
@@ -352,6 +354,7 @@
 		<exec executable="phpunit" dir="frontends/php/tests" failonerror="off">
 			<arg line="--log-junit=${basedir}/build/logs/phpunit.xml"/>
 			<arg line="--bootstrap=bootstrap.php"/>
+			<arg line="--do-not-cache-result"/>
 			<arg line="${phpunit_filter}"/>
 			<arg line="api_json/ApiJsonTests.php"/>
 		</exec>
@@ -361,6 +364,7 @@
 		<exec executable="phpunit" dir="frontends/php/tests" failonerror="off">
 			<arg line="--log-junit=${basedir}/build/logs/phpunit.xml"/>
 			<arg line="--bootstrap=bootstrap.php"/>
+			<arg line="--do-not-cache-result"/>
 			<arg line="${phpunit_filter}"/>
 			<arg line="integration/IntegrationTests.php"/>
 		</exec>
